--- a/index.html
+++ b/index.html
@@ -1,25 +1,48 @@
-<!doctype html>
+﻿<!doctype html>
 <html>
 <head>
-  <meta charset="utf-8"> 
-  <meta id="idviewport" name="viewport" content="width=device-width, user-scalable=no, initial-scale=1">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <title>SignMaker 2015</title>
-  <link rel="stylesheet" type="text/css" href="index.css" />
-  <script src="lib/draggabilly.min.js"></script>
-  <script src="lib/mithril.min.js"></script>
-  <script src="lib/translate.min.js"></script>
-  <script src="lib/sw10.min.js"></script>
-  <script src="config/messages.js" charset="utf-8"></script>
-  <script src="config/keyboard.js"></script>
+    <meta charset="utf-8">
+    <meta id="idviewport" name="viewport" content="width=device-width, user-scalable=no, initial-scale=1">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <title>SignMaker 2015</title>
+    <link rel="stylesheet" type="text/css" href="index.css" />
+    <script src="lib/draggabilly.min.js"></script>
+    <script src="lib/mithril.min.js"></script>
+    <script src="lib/translate.min.js"></script>
+    <script src="lib/sw10.min.js"></script>
+    <script src="config/messages.js" charset="utf-8"></script>
+    <script src="config/keyboard.js"></script>
+
+    <style>
+        html, body {
+            min-height: 100%;
+        }
+
+        body {
+            position: relative;
+        }
+
+        .overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 10;
+            background-color: lightblue; /*dim the background*/
+        }
+    </style>
+
 </head>
 <body>
-  <div id="header"></div>
-  <div id="palette"></div>
-  <div id="dictionary"></div>
-  <div id="signmaker"></div>
-  <div id="signtext"></div>
-  <script src="index.js"></script>
-  <a id="downloadlink" style="display: none" charset="utf-8">Download</a>
+    <div id="main"></div>
+    <script type="text/javascript" src="lib/elm.js"></script>
+    <div id="header"></div>
+    <div id="palette"></div>
+    <div id="dictionary"></div>
+    <div id="signmaker"></div>
+    <div id="signtext"></div>
+    <script src="index.js"></script>
+    <a id="downloadlink" style="display: none" charset="utf-8">Download</a>
 </body>
 </html>
