Making QuickSignEditor work in signmaker again

--- a/index.html
+++ b/index.html
@@ -20,8 +20,14 @@
     </style>
 
     <link href="css/quickSignEditor.css" rel="stylesheet" />
-
-
+    <link rel="stylesheet" href="styles/quickSignEditor.css">
+    <link rel="stylesheet" href="images/hands12.png.css">
+    <link rel="stylesheet" href="images/hands34.png.css">
+    <link rel="stylesheet" href="images/hands56.png.css">
+    <link rel="stylesheet" href="images/hands78.png.css">
+    <link rel="stylesheet" href="images/hands910.png.css">
+    <script src="chooserclassification.js"></script>
+    <script src="symbolsize.js"></script>
 
 </head>
 
