moving static files to assets folder

--- a/index.html
+++ b/index.html
@@ -6,28 +6,28 @@
     <meta id="idviewport" name="viewport" content="width=device-width, user-scalable=no, initial-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <title>SignMaker 2015</title>
-    <link rel="stylesheet" type="text/css" href="index.css" />
-    <script src="lib/draggabilly.min.js"></script>
-    <script src="lib/mithril.min.js"></script>
-    <script src="lib/translate.min.js"></script>
-    <script src="lib/sw10.min.js"></script>
-    <script src="config/messages.js" charset="utf-8"></script>
-    <script src="config/keyboard.js"></script>
+    <link rel="stylesheet" type="text/css" href="./assets/styles/index.css" />
+    <script src="./assets/lib/draggabilly.min.js"></script>
+    <script src="./assets/lib/mithril.min.js"></script>
+    <script src="./assets/lib/translate.min.js"></script>
+    
+    <script src="./assets/config/messages.js" charset="utf-8"></script>
+    <script src="./assets/config/keyboard.js"></script>
+      <link rel="shortcut icon" type="image/png" href="./assets/favicon.ico" />
     <style type="text/css">
         @import url(https://code.getmdl.io/1.1.3/material.min.css);
         @import url(https://fonts.googleapis.com/icon?family=Material+Icons);
         @import url(https://fonts.googleapis.com/css?family=Roboto:400,300,500|Roboto+Mono|Roboto+Condensed:400,700&subset=latin,latin-ext);
     </style>
-
-    <link href="css/quickSignEditor.css" rel="stylesheet" />
-    <link rel="stylesheet" href="styles/quickSignEditor.css">
-    <link rel="stylesheet" href="images/hands12.png.css">
-    <link rel="stylesheet" href="images/hands34.png.css">
-    <link rel="stylesheet" href="images/hands56.png.css">
-    <link rel="stylesheet" href="images/hands78.png.css">
-    <link rel="stylesheet" href="images/hands910.png.css">
-    <script src="chooserclassification.js"></script>
-    <script src="symbolsize.js"></script>
+    <script src="./assets/lib/chooserclassification.js"></script>
+    <script src="./assets/lib/symbolsize.js"></script>
+    <script src="./assets/lib/sw10.js"></script>
+    <link rel="stylesheet" href="./assets/styles/quickSignEditor.css">
+    <link rel="stylesheet" href="./assets/images/hands12.png.css">
+    <link rel="stylesheet" href="./assets/images/hands34.png.css">
+    <link rel="stylesheet" href="./assets/images/hands56.png.css">
+    <link rel="stylesheet" href="./assets/images/hands78.png.css">
+    <link rel="stylesheet" href="./assets/images/hands910.png.css">
 
 </head>
 
@@ -41,7 +41,7 @@
         <div id="signmaker"></div>
         <div id="signtext"></div>
         <script src="index.js"></script>
-        <script type="text/javascript" src="lib/elm.js"></script>
+        <script type="text/javascript" src="./assets/lib/elm.js"></script>
         <a id="downloadlink" style="display: none" charset="utf-8">Download</a>
     </div>
 </body>
