Removing files already in assets

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div id="dictionary"></div>
         <div id="signmaker"></div>
         <div id="signtext"></div>
-        <script src="index.js"></script>
+        <script src="./assets/lib/index.js"></script>
         <script type="text/javascript" src="./assets/lib/elm.js"></script>
         <a id="downloadlink" style="display: none" charset="utf-8">Download</a>
     </div>
