Add JQuery colorpicker

--- a/index.html
+++ b/index.html
@@ -19,15 +19,26 @@
         @import url(https://fonts.googleapis.com/icon?family=Material+Icons);
         @import url(https://fonts.googleapis.com/css?family=Roboto:400,300,500|Roboto+Mono|Roboto+Condensed:400,700&subset=latin,latin-ext);
     </style>
+    <script src="./assets/lib/peg-0.10.0.min.js"></script>
+    <script src="./assets/lib/fswpeg.js"></script>
+    <script src="./assets/lib/initialchoosings.js"></script>
     <script src="./assets/lib/chooserclassification.js"></script>
     <script src="./assets/lib/symbolsize.js"></script>
     <script src="./assets/lib/SuttonSignWriting.js"></script>
+    <script src="./assets/lib/jquery.min.js"></script>
+    <script src="./assets/lib/jquery-ui.min.js"></script>
+    <script src="./assets/lib/jquery.colorpicker.js"></script>
+    <script src="./assets/lib/jquery.colorpicker.js"></script>
+    <script src="./assets/lib/dialog-polyfill.min.js"></script>
+    <link rel="stylesheet" href="./assets/styles/dialog-polyfill.css">
     <link rel="stylesheet" href="./assets/styles/quickSignEditor.css">
     <link rel="stylesheet" href="./assets/images/hands12.png.css">
     <link rel="stylesheet" href="./assets/images/hands34.png.css">
     <link rel="stylesheet" href="./assets/images/hands56.png.css">
     <link rel="stylesheet" href="./assets/images/hands78.png.css">
     <link rel="stylesheet" href="./assets/images/hands910.png.css">
+    <link rel="stylesheet" type="text/css" href="./assets/styles/jquery.colorpicker.css">
+    <link rel="stylesheet" type="text/css" href="./assets/styles/jquery-ui.css">
 
 </head>
 
